[gd_scene load_steps=39 format=3 uid="uid://b2bi5w4wiyj1k"]

[ext_resource type="Script" path="res://script/lesson_npc.gd" id="1_afidd"]
[ext_resource type="Texture2D" uid="uid://cgsv1h81cu08o" path="res://art/characters/NPC/Idle.png" id="2_86764"]
[ext_resource type="Texture2D" uid="uid://bymwf3rovy221" path="res://art/characters/NPC/Walk.png" id="3_be0g2"]
[ext_resource type="Texture2D" uid="uid://balng6y050g6k" path="res://art/tileset/golden chalice 64x64-spirits.png" id="3_vqu4g"]
[ext_resource type="Texture2D" uid="uid://qwj5rxipg3tr" path="res://art/tileset/Settlement.png" id="5_w8ey4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jpk1m"]
atlas = ExtResource("2_86764")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_laq3w"]
atlas = ExtResource("2_86764")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc0vk"]
atlas = ExtResource("2_86764")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6wi1"]
atlas = ExtResource("2_86764")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt57o"]
atlas = ExtResource("3_vqu4g")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mvqi"]
atlas = ExtResource("3_vqu4g")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5xh5"]
atlas = ExtResource("3_vqu4g")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfku4"]
atlas = ExtResource("3_vqu4g")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbu1j"]
atlas = ExtResource("3_vqu4g")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd8jm"]
atlas = ExtResource("3_vqu4g")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtsx8"]
atlas = ExtResource("3_vqu4g")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8g2x"]
atlas = ExtResource("3_vqu4g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_655lv"]
atlas = ExtResource("3_be0g2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykwaj"]
atlas = ExtResource("3_be0g2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36qux"]
atlas = ExtResource("3_be0g2")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmd70"]
atlas = ExtResource("3_be0g2")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7iwe"]
atlas = ExtResource("3_be0g2")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6jrc"]
atlas = ExtResource("3_be0g2")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7ml8"]
atlas = ExtResource("3_be0g2")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_elwrm"]
atlas = ExtResource("3_be0g2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr14m"]
atlas = ExtResource("3_be0g2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcenq"]
atlas = ExtResource("3_be0g2")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv5te"]
atlas = ExtResource("3_be0g2")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5td7m"]
atlas = ExtResource("3_be0g2")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvi2p"]
atlas = ExtResource("3_be0g2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8y8p"]
atlas = ExtResource("3_be0g2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2etsh"]
atlas = ExtResource("3_be0g2")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bml23"]
atlas = ExtResource("3_be0g2")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1xkp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpk1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laq3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc0vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6wi1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt57o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mvqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5xh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfku4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbu1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd8jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtsx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8g2x")
}],
"loop": true,
"name": &"interactable",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_655lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykwaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36qux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmd70")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7iwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6jrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7ml8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elwrm")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr14m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcenq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv5te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5td7m")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvi2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8y8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2etsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bml23")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ntokn"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0bex0"]
radius = 37.0135

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nb5uk"]
texture = ExtResource("5_w8ey4")
2:0/0 = 0
3:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
4:5/0 = 0
5:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
8:17/0 = 0
9:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
2:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
8:20/0 = 0
9:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
14:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
26:21/0 = 0
27:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
26:22/0 = 0
27:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
8:23/0 = 0
9:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
26:23/0 = 0
27:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
8:24/0 = 0
9:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0
26:24/0 = 0
27:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
8:25/0 = 0
9:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
26:25/0 = 0
27:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
8:26/0 = 0
9:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
8:27/0 = 0
9:27/0 = 0
16:27/0 = 0
17:27/0 = 0
20:27/0 = 0
21:27/0 = 0
22:27/0 = 0
23:27/0 = 0
24:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
8:28/0 = 0
9:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
20:28/0 = 0
22:28/0 = 0
23:28/0 = 0
24:28/0 = 0
1:29/0 = 0
16:29/0 = 0
17:29/0 = 0
20:29/0 = 0
21:29/0 = 0
22:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
24:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
20:31/0 = 0
21:31/0 = 0
22:31/0 = 0
23:31/0 = 0
24:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
20:32/0 = 0
21:32/0 = 0
22:32/0 = 0
23:32/0 = 0
24:32/0 = 0
0:33/0 = 0
2:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0

[sub_resource type="TileSet" id="TileSet_hvbby"]
sources/0 = SubResource("TileSetAtlasSource_nb5uk")

[node name="lesson_npc" type="CharacterBody2D"]
position = Vector2(120, 52)
script = ExtResource("1_afidd")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1xkp6")
animation = &"interactable"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ntokn")

[node name="interact_zone" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_zone"]
shape = SubResource("CircleShape2D_0bex0")
debug_color = Color(0.756863, 0.309804, 0.831373, 0.419608)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_hvbby")

[connection signal="body_entered" from="interact_zone" to="." method="_on_interact_zone_body_entered"]
[connection signal="body_exited" from="interact_zone" to="." method="_on_interact_zone_body_exited"]
